--- a/auction/templates/base.html
+++ b/auction/templates/base.html
@@ -30,10 +30,10 @@
             <a class="nav-item nav-link" href="#">Bookings</a>
             {% if current_user.is_authenticated %} 
               <a class="nav-item nav-link disabled text-muted" href="#"><span>Welcome, {{ current_user.name }}</span></a> 
-              <a class="nav-item nav-link" href="{{ url_for('authentication.logout') }}">Log Out</a> 
+              <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a> 
             {% else %} 
-              <a class="nav-item nav-link" href="{{ url_for('authentication.register') }}">Register</a> 
-              <a class="nav-item nav-link" href="{{ url_for('authentication.login') }}">Log In</a> 
+              <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a> 
+              <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Log In</a> 
             {% endif %} 
           </div> 
         </div> 
