--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -1,5 +1,6 @@
 {% extends 'base.html'%}
 
+{% block header %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -50,61 +51,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   
 
- 
 
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="homepage.html"><img src="img/35132-removebg-preview.png"
-          style="max-height: 50px; max-width: 50px;" /> </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
-        <span class="navbar-toggler-icon"></span>
-  
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="homepage.html">Home </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="watchlist.html">Watch List </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="itemdetails.html">Buy Watches</a>
-          </li>
-          <li class="nav-item">
-            
-              <div class="btn-group" role="group">
-                <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Account
-                </button>
-                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                  <a class="dropdown-item" href="#">Log In</a>
-                  <a class="dropdown-item" href="#">Sign Up</a>
-                </div>
-              </div>
-            </div>
-            </button>
-          <li class="nav-item">
-           
-           <a href="itemcreation.html" class="btn btn btn-outline-success" tabindex="-1" role="button">Post an Ad</a>
-          </li>
-  
-          </li>
-  
-        </ul>
-      </div>
-    </nav>
+{% endblock %}
+
+
+   
 
 
 
-
-
-
-
-
-
-
+    {% block content %}
 
 
 
@@ -259,3 +214,5 @@
 
 </body>
 </html>
+
+{% endblock %}
