--- a/auction/templates/base.html
+++ b/auction/templates/base.html
@@ -28,8 +28,8 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01"> 
           <div class="navbar-nav ml-auto"> 
             
-            <a class="nav-item nav-link" href="#">Destinations</a>
-            <a class="nav-item nav-link" href="#">Bookings</a>
+            <a class="nav-item nav-link" href="watchlist">Watchlist</a>
+            <a class="nav-item nav-link" href="create">Post Item</a>
             {% if current_user.is_authenticated %} 
               <a class="nav-item nav-link disabled text-muted" href="#"><span>Welcome, {{ current_user.name }}</span></a> 
               <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a> 
