Route and error handling
fixed route to itemdetails page from homepage (search button)

added specific handlers for 404 & 500

--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -169,7 +169,7 @@
           <div class= "col-lg-5">  </div>
 
           <div class="col-md-4 col-lg-2">
-            <a href="itemdetails.html" class="btn btn-dark btn-lg" role="button" >Search for Watches</a> 
+            <a href="itemdetails" class="btn btn-dark btn-lg" role="button" >Search for Watches</a> 
          </div>
          
         </div>
