--- a/auction/templates/watchlist.html
+++ b/auction/templates/watchlist.html
@@ -1,191 +1,191 @@
 <!doctype html>
 <html lang="en">
-  <head>
 
-    <title>Watch List</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
-    
-    <style>
+  <title>Watch List</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        body {
-          background-image: linear-gradient(to right, #7a7a7a,  #8b4f00,  #524e4e);;
-          
-        }
-        
-        .content{
-        
-        background: black;
-        width: 50%;
-        padding: 40px;
-        margin: 100px auto;
-        
-        }
-        
-        
-        
-            </style>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/index.css">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  
+  <style>
+    body {
+      background-image: linear-gradient(to right, #7a7a7a, #8b4f00, #524e4e);
+      ;
 
- 
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="homepage.html"><img src="img/35132-removebg-preview.png"
-          style="max-height: 50px; max-width: 50px;" /> </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
-        <span class="navbar-toggler-icon"></span>
-  
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="homepage.html">Home </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="watchlist.html">Watch List </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log In </a>
-          </li>
-          <li class="nav-item">
-            
-              <div class="btn-group" role="group">
-                <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Account
-                </button>
-                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                  <a class="dropdown-item" href="#">Log In</a>
-                  <a class="dropdown-item" href="#">Sign Up</a>
-                </div>
-              </div>
-            </div>
-            </button>
-  
-        </ul>
+    }
+
+    .content {
+
+      background: black;
+      width: 50%;
+      padding: 40px;
+      margin: 100px auto;
+
+    }
+  </style>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+
+
+
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand" href="homepage.html"><img src="../static/Images/logo/35132-removebg-preview.png"
+        style="max-height: 50px; max-width: 50px;" /> </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+      <span class="navbar-toggler-icon"></span>
+
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav ml-auto">
+
+        <a class="nav-item nav-link" href="watchlist">Watchlist</a>
+        <a class="nav-item nav-link" href="create">Post Item</a>
+        {% if current_user.is_authenticated %}
+        <a class="nav-item nav-link disabled text-muted" href="#"><span>Welcome, {{ current_user.name }}</span></a>
+        <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+        {% else %}
+        <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
+        <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+        {% endif %}
       </div>
-    </nav>
+    </div>
 
-      </head>
+  </div>
+  </nav>
 
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-4">
-            <p></p>
-          </div>
-          <div class="col-md-4">
-            <p><font size="7" color="White">Watch List</font></p>
-          </div>
-          <div class="col-md-4">
-            <p></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                2015 Rolex Submariner
-              </div>
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                  <p>Auction ends in:<br> 1d 11h 53m <br><br> Last Bid:<br> $2,675</p>
-                  <footer class="blockquote-footer">Item added <cite title="Source Title">40mins ago</cite></footer>
-                </blockquote>
-                <a href="itemdetails.html" class="btn btn-danger">View details & bid</a>  <a href="#" class="btn btn-secondary">Remove from Watchlist</a>  
-              </div>
-            </div>
-          </div>
-          <div class="col-md-7">
-            <div class="row">
-              <div class="column">
-                <img src="img/images1/rolex4.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-              <div class="column">
-                <img src="img/images1/rolex2.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-              <div class="column">
-                <img src="img/images1/rolex3.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-            </div>
-          </div>
-        </div>
+</head>
 
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                2017 Rolex Rolex-Datejust
-              </div>
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                  <p>Auction ends in:<br> 4d 1h 39m <br><br> Last Bid:<br> $967</p>
-                  <footer class="blockquote-footer">Item added <cite title="Source Title">1d 11hr 20m ago</cite></footer>
-                </blockquote>
-                <a href="itemdetails.html" class="btn btn-danger">View details & bid</a>  <a href="#" class="btn btn-secondary">Remove from Watchlist</a>  
-              </div>
-            </div>
-          </div>
-          <div class="col-md-7">
-            <div class="row">
-              <div class="column">
-                <img src="img/images1/Rolex-Datejust-41-126333-Baselworld-2016-Review-8.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-              <div class="column">
-                <img src="img/images1/rolex5.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-              <div class="column">
-                <img src="img/images1/rolex6.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-            </div>
-          </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-4">
+      <p></p>
+    </div>
+    <div class="col-md-4">
+      <p>
+        <font size="7" color="White">Watch List</font>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <p></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          2015 Rolex Submariner
         </div>
-
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <div class="card-header">
-                2015 Invicta Pro Diver
-              </div>
-              <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                  <p>Auction ends in:<br> 0d 1h 50m <br><br> Last Bid:<br> $55</p>
-                  <footer class="blockquote-footer">Item added <cite title="Source Title">5mins ago</cite></footer>
-                </blockquote>
-                <a href="itemdetails.html" class="btn btn-danger">View details & bid</a>  <a href="#" class="btn btn-secondary">Remove from Watchlist</a>  
-              </div>
-            </div>
-          </div>
-          <div class="col-md-7">
-            <div class="row">
-              <div class="column">
-                <img src="img/images1/invicta1.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-              <div class="column">
-                <img src="img/images1/invicta2.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-              <div class="column">
-                <img src="img/images1/invicta3.jpg" class="img-fluid" alt="Responsive image" style ="width: 280px">
-              </div>
-            </div>
-          </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>Auction ends in:<br> 1d 11h 53m <br><br> Last Bid:<br> $2,675</p>
+            <footer class="blockquote-footer">Item added <cite title="Source Title">40mins ago</cite></footer>
+          </blockquote>
+          <a href="itemdetails.html" class="btn btn-danger">View details & bid</a> <a href="#"
+            class="btn btn-secondary">Remove from Watchlist</a>
         </div>
-        
-      
       </div>
+    </div>
+    <div class="col-md-7">
+      <div class="row">
+        <div class="column">
+          <img src="img/images1/rolex4.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+        <div class="column">
+          <img src="img/images1/rolex2.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+        <div class="column">
+          <img src="img/images1/rolex3.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+      </div>
+    </div>
+  </div>
 
-      
-    <!--
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          2017 Rolex Rolex-Datejust
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>Auction ends in:<br> 4d 1h 39m <br><br> Last Bid:<br> $967</p>
+            <footer class="blockquote-footer">Item added <cite title="Source Title">1d 11hr 20m ago</cite></footer>
+          </blockquote>
+          <a href="itemdetails.html" class="btn btn-danger">View details & bid</a> <a href="#"
+            class="btn btn-secondary">Remove from Watchlist</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-7">
+      <div class="row">
+        <div class="column">
+          <img src="img/images1/Rolex-Datejust-41-126333-Baselworld-2016-Review-8.jpg" class="img-fluid"
+            alt="Responsive image" style="width: 280px">
+        </div>
+        <div class="column">
+          <img src="img/images1/rolex5.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+        <div class="column">
+          <img src="img/images1/rolex6.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          2015 Invicta Pro Diver
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>Auction ends in:<br> 0d 1h 50m <br><br> Last Bid:<br> $55</p>
+            <footer class="blockquote-footer">Item added <cite title="Source Title">5mins ago</cite></footer>
+          </blockquote>
+          <a href="itemdetails.html" class="btn btn-danger">View details & bid</a> <a href="#"
+            class="btn btn-secondary">Remove from Watchlist</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-7">
+      <div class="row">
+        <div class="column">
+          <img src="img/images1/invicta1.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+        <div class="column">
+          <img src="img/images1/invicta2.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+        <div class="column">
+          <img src="img/images1/invicta3.jpg" class="img-fluid" alt="Responsive image" style="width: 280px">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</div>
+
+
+<!--
     <div class="card" style="width: 18rem;">
         <img src="img/35132-removebg-preview.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -194,7 +194,8 @@
           <a href="#" class="btn btn-primary">List a watch for Sale</a>
         </div>
       </div>
-    --> 
+    -->
 
 </body>
+
 </html>
