--- a/auction/templates/base.html
+++ b/auction/templates/base.html
@@ -2,73 +2,90 @@
 
 
 <head>
- <!-- Title of the app-->
-<title>Find Watches</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
- </head>
+  <!-- Title of the app-->
+  <title>Find Watches</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <style>
+    .content {
+
+      background: black;
+      width: 50%;
+      padding: 40px;
+      margin: 100px auto;
+    }
+
+    body {
+      background-image: linear-gradient(to right, #7a7a7a, #8b4f00, #524e4e);
+      ;
+
+    }
+  </style>
+
+
+
+
+</head>
+
 <body>
-  <!-- Header -->
-  <header class="bg-light border-bottom">
- 
+
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container">
- 
-        <!-- Your Travel App Name or Logo -->
-        <a href="/" class="navbar-brand">
-          Watches
-        </a>
- 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
- 
-        <!-- Navbar -->
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01"> 
-          <div class="navbar-nav ml-auto"> 
-            
-            <a class="nav-item nav-link" href="watchlist">Watchlist</a>
-            <a class="nav-item nav-link" href="create">Post Item</a>
-            {% if current_user.is_authenticated %} 
-              <a class="nav-item nav-link disabled text-muted" href="#"><span>Welcome, {{ current_user.name }}</span></a> 
-              <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a> 
-            {% else %} 
-              <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a> 
-              <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Log In</a> 
-            {% endif %} 
-          </div> 
-        </div> 
-      </div> 
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="homepage.html"><img src="../static/Images/logo/35132-removebg-preview.png"
+          style="max-height: 50px; max-width: 50px;" /> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars"></i>
+        <span class="navbar-toggler-icon"></span>
+
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="navbar-nav ml-auto">
+
+          <a class="nav-item nav-link" href="watchlist">Watchlist</a>
+          <a class="nav-item nav-link" href="create">Post Item</a>
+          {% if current_user.is_authenticated %}
+          <a class="nav-item nav-link disabled text-muted" href="#"><span>Welcome, {{ current_user.name }}</span></a>
+          <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
+          {% else %}
+          <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
+          <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Log In</a>
+          {% endif %}
+        </div>
+      </div>
+
+      </div>
     </nav>
 
 
     {% block header %}
     {% endblock %}
 
-    </header>
 
-    
-    {% block content %}
-    {% endblock %}
 
-    <footer class="footer">
-        <div class="text-center py-2 bg-light">
-            <span class="text-dark">Copyright &copy; 2019</span>
-        </div>
-    </footer> 
-    
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    
-    
-  </body>
-  </html>
+
+  {% block content %}
+  {% endblock %}
+
+  <footer class="footer">
+    <div class="text-center py-2 bg-light">
+      <span class="text-dark">Copyright &copy; 2019</span>
+    </div>
+  </footer>
+
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+
+</body>
+
+</html>
