--- a/auction/templates/itemdetails.html
+++ b/auction/templates/itemdetails.html
@@ -1,18 +1,7 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
 
 <head>
-
-  <title>Watch Details</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/index.css">
-
+  
   <style>
     .content {
 
@@ -22,133 +11,24 @@
       margin: 100px auto;
     }
 
-      body {
-          background-image: linear-gradient(to right, #7a7a7a,  #8b4f00,  #524e4e);;
-          
-        }
+    body {
+      background-image: linear-gradient(to right, #7a7a7a, #8b4f00, #524e4e);
+      ;
 
-    
+    }
   </style>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-
-
-
-
-  <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="homepage.html"><img src="img/35132-removebg-preview.png"
-        style="max-height: 50px; max-width: 50px;" /> </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
-      <span class="navbar-toggler-icon"></span>
-
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="homepage.html">Home </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="watchlist.html">Watch List </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Log In </a>
-        </li>
-        <li class="nav-item">
-          
-            <div class="btn-group" role="group">
-              <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
-              </button>
-              <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                <a class="dropdown-item" href="#">Log In</a>
-                <a class="dropdown-item" href="#">Sign Up</a>
-              </div>
-            </div>
-          </div>
-          </button>
-        <li class="nav-item">
-          <a href="watchlist.html" class="btn btn btn-outline-success" tabindex="-1" role="button">Add to Watchlist</a>
-        </li>
-
-        </li>
-
-      </ul>
-    </div>
-  </nav>
 
 </head>
 
+{% block content %}
 
+<!--Row for product details -->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-4">
-      <p></p>
-    </div>
-    <div class="col-md-5">
-      <p><font size="7" color="White">2015 Rolex Submariner</font></p>
-    
-    </div>
-  </div>
-</div>
-    
 
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="container-fluid"></div>
-
-  <div class="row">
-    
-    <div class="col-1">
-
-    </div>
-
-    <div class="col-md-4 col-lg-3">
-
-      <div class="card">
-        <div class="card-header">
-          Auction:
-        </div>
-        <div class="card-body">
-          <blockquote class="blockquote mb-0">
-            <p>Auction ends in:<br> <font color = "red">1d 11h 53m</font> <br><br>Starting Bid:  $1,500 <br> Last Bid:  $2,675 <br><cite><font size="2" color="black">-placed by user andy88 at 21:33</font></cite></p>
-  
-          </blockquote>
-          <input class="form-control" id="ex1" type="text" placeholder="Bid higher than $2,675">
-          <br>
-          <a href="#" class="btn btn-danger">Place Bid</a>
-
-          
-        </div>
-      </div>
-
-  </div>
-
+    <!-- Container for the image gallery -->
     <div class=" col-lg-5 col-md-10 ">
-
-      <!-- Container for the image gallery -->
-     <div class="slider-holder">
+      <div class="slider-holder">
         <span id="slider-image-1"></span>
         <span id="slider-image-2"></span>
         <span id="slider-image-3"></span>
@@ -165,51 +45,77 @@
         </div>
       </div>
     </div>
+
+    <!-- Description -->
     <div class="col-md-3 col-lg-2">
-      <div class="myBox"><font color = "white">Specifications: <br><br>Make: Rolex<br> Model: Submariner <br> Year: 2015<br> Condition: used<br> Movement: Automatic<br><br> Description:<br>
-        Almost new Rolex Submariner, used on a few occasions.
+      <div class="myBox">
+        <font color="white">Specifications: <br><br>Make: Rolex<br> Model: Submariner <br> Year: 2015<br> Condition:
+          used<br> Movement: Automatic<br><br> Description:<br>
+          Almost new Rolex Submariner, used on a few occasions.
           Will come with original paperwork and boxes. Watch was purchased
-          from Rolex Brisbane in November 2015. Great watch, never missed a beat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam convallis efficitur commodo. Nulla iaculis, lectus in congue semper, quam dui mattis metus, sed bibendum erat sapien vel urna.
+          from Rolex Brisbane in November 2015. Great watch, never missed a beat. Lorem ipsum dolor sit amet,
+          consectetur
+          adipiscing elit. Etiam convallis efficitur commodo. Nulla iaculis, lectus in congue semper, quam dui mattis
+          metus, sed bibendum erat sapien vel urna.
         </font>
+      </div>
+    </div>
+
+    <!-- Bidding Tab -->
+    <div class="col-md-4 col-lg-3">
+      <div class="card">
+        <div class="card-header">
+          Auction:
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>Auction ends in:<br>
+              <font color="red">1d 11h 53m</font> <br><br>Starting Bid: $1,500 <br> Last Bid: $2,675 <br><cite>
+                <font size="2" color="black">-placed by user andy88 at 21:33</font>
+              </cite>
+            </p>
+          </blockquote>
+
+          <input class="form-control" id="ex1" type="text" placeholder="Bid higher than $2,675">
+          <br>
+          <a href="#" class="btn btn-danger">Place Bid</a>
         </div>
       </div>
     </div>
-    </div>
+
+  </div>
+
+
+
+</div>
+
+<!-- Row for posting review-->
+<div class="container-fluid">
+  <div class="row">
     
+  </div>
+</div>
 
-      <div class="row">
-        <div class="col-1">
-
-        </div>
-
-        <div class="col-md-3">
-          <div class="card">
-            <div class="card-header">
-              Reviews:
-            </div>
-            <div class="card-body">
-              <blockquote class="blockquote mb-0">
-                <p>Great Seller, bought a genuine rolex and am happy with the purchase, quick delievery and Item as explained.</p>
-                <footer class="blockquote-footer">User knightrider3 <cite title="Source Title">10/08/2020</cite></footer>
-              </blockquote>
-              <a href="#" class="btn btn-dark">Post a review</a>
-
-              
-            </div>
-          </div>
-          </div>
-
-
-
+<!-- Row for reviews -->
+<div class="row">
+  <div class="col-md-3">
+    <div class="card">
+      <div class="card-header">
+        Reviews:
       </div>
 
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p>Great Seller, bought a genuine rolex and am happy with the purchase, quick delievery and Item as explained.
+          </p>
+          <footer class="blockquote-footer">User knightrider3 <cite title="Source Title">10/08/2020</cite></footer>
+        </blockquote>
+
+        <a href="#" class="btn btn-dark">Post a review</a>
+      </div>
     </div>
+  </div>
 
 
-    </div>
-   
-
-
-      </body>
-
-</html>
+{% endblock %}
