--- a/auction/templates/addwatches.html
+++ b/auction/templates/addwatches.html
@@ -6,8 +6,7 @@
     <div class="row mt-5">
       <div class="col-md-12">
 
-        <h1>Add Travel Destination</h1>
-        <p>Enter a country that you will help clients travel to.</p>
+        <h1>Post an Ad</h1>
 
         {{wtf.quick_form(form)}}
         
