--- a/auction/templates/itemdetails.html
+++ b/auction/templates/itemdetails.html
@@ -6,13 +6,12 @@
 <head>
 
   <style>
-    
+
     #post-review {
-      margin: 25px;
-      margin-top: 40px;
-      margin-left: 100px;
-      width: 100%;
-      text-align: center;
+
+      margin-top: 25px;
+      display: flex;
+      justify-content: center;
     }
 
     #post-btn {
@@ -20,7 +19,9 @@
     }
 
     #user-reviews {
-      margin-bottom: 10px;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 25px;
     }
 
   </style>
@@ -29,12 +30,14 @@
 
 {% endblock %}
 
+
 {% block content %}
 
 <!--Row for product details -->
 <div class="container-fluid">
   <div class="row">
 
+    
     <!-- Container for the image gallery -->
     <div class="col-md-10 col-lg-5">
       <div class="slider-holder">
@@ -126,8 +129,22 @@
           </p>
           <footer class="blockquote-footer">User knightrider3 <cite title="Source Title">10/08/2020</cite></footer>
         </blockquote>
+      </div>
+    </div>
+  </div>
 
-        <a href="#" class="btn btn-dark">Post a review</a>
+  <div class="col-md-3">
+    <div class="card">
+      <div class="card-header">
+        Reviews:
+      </div>
+
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <p>Great Seller, bought a genuine rolex and am happy with the purchase, quick delievery and Item as explained.
+          </p>
+          <footer class="blockquote-footer">User knightrider3 <cite title="Source Title">10/08/2020</cite></footer>
+        </blockquote>
       </div>
     </div>
   </div>
@@ -145,28 +162,9 @@
           <footer class="blockquote-footer">User knightrider3 <cite title="Source Title">10/08/2020</cite></footer>
         </blockquote>
 
-        <a href="#" class="btn btn-dark">Post a review</a>
       </div>
     </div>
   </div>
-
-  <div class="col-md-3">
-    <div class="card">
-      <div class="card-header">
-        Reviews:
-      </div>
-
-      <div class="card-body">
-        <blockquote class="blockquote mb-0">
-          <p>Great Seller, bought a genuine rolex and am happy with the purchase, quick delievery and Item as explained.
-          </p>
-          <footer class="blockquote-footer">User knightrider3 <cite title="Source Title">10/08/2020</cite></footer>
-        </blockquote>
-
-        <a href="#" class="btn btn-dark">Post a review</a>
-      </div>
-    </div>
-  </div>
-
+</div>
 
   {% endblock %}
