--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -1,35 +1,10 @@
 {% extends 'base.html'%}
 
-<head>
+{% block head %}
 
-  <title>Home Page</title>
+<title>Home Page</title>
 
-  <style>
-    .content {
-
-      background: black;
-      width: 50%;
-      padding: 40px;
-      margin: 100px auto;
-
-    }
-
-    .content {
-
-      background: black;
-      width: 50%;
-      padding: 40px;
-      margin: 100px auto;
-    }
-
-    body {
-      background-image: linear-gradient(to right, #7a7a7a, #8b4f00, #524e4e);
-      ;
-
-    }
-  </style>
-
-</head>
+{% endblock %}
 
 {% block header %}
 
