--- a/auction/templates/itemdetails.html
+++ b/auction/templates/itemdetails.html
@@ -61,8 +61,8 @@
     <!-- Description -->
     <div class="col-md-3 col-lg-4">
       <div class="myBox">
-        <font color="white">Specifications: <br><br>Make: Rolex<br> Model: Submariner <br> Year: 2015<br> Condition:
-          used<br> Movement: Automatic<br><br> Description:<br>
+        <font color="white">Specifications: <br><br>Make: Rolex <!--{{ watch.make }}--> <br> Model: Submariner <!--{{ watch.model }}--> <br> Year: 2015 <!--{{ watch.year }}--> <br> Condition: <!--{{ watch.condition }}-->
+          used<br> Movement: Automatic <!--{{ watch.movement }}--><br><br> Description: <!--{{ watch.description }}--><br>
           Almost new Rolex Submariner, used on a few occasions.
           Will come with original paperwork and boxes. Watch was purchased
           from Rolex Brisbane in November 2015. Great watch, never missed a beat. Lorem ipsum dolor sit amet,
@@ -82,7 +82,7 @@
         <!-- Card Body -->
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p>Auction ends in:<br>
+            <p>Auction ends in:<br> <!-- created_at -->
               <font color="red">1d 11h 53m</font> <br><br>Starting Bid: $1,500 <br> Last Bid: $2,675 <br><cite>
                 <font size="2" color="black">-placed by user andy88 at 21:33</font>
               </cite>
