--- a/auction/templates/itemdetails.html
+++ b/auction/templates/itemdetails.html
@@ -61,8 +61,8 @@
     <!-- Description -->
     <div class="col-md-3 col-lg-4">
       <div class="myBox">
-        <font color="white">Specifications: <br><br>Make: Rolex <!--{{ watch.make }}--> <br> Model: Submariner <!--{{ watch.model }}--> <br> Year: 2015 <!--{{ watch.year }}--> <br> Condition: <!--{{ watch.condition }}-->
-          used<br> Movement: Automatic <!--{{ watch.movement }}--><br><br> Description: <!--{{ watch.description }}--><br>
+        <font color="white">Specifications: <br><br>Make: Rolex <!-- watch.make --> <br> Model: Submariner <!-- watch.model --> <br> Year: 2015 <!-- watch.year --> <br> Condition: <!-- watch.condition -->
+          used<br> Movement: Automatic <!-- watch.movement --><br><br> Description: <!-- watch.description --><br>
           Almost new Rolex Submariner, used on a few occasions.
           Will come with original paperwork and boxes. Watch was purchased
           from Rolex Brisbane in November 2015. Great watch, never missed a beat. Lorem ipsum dolor sit amet,
