--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -160,11 +160,11 @@
       <div class="card-deck mb-3">
         {% for Items in Items %}
         <div class="card">
-          <img class="card-img-top" src="{{Items.image}}" alt="{{Items.Make}}">
+          <img class="card-img-top" src="{{Items.image}}" alt="{{Items.make}}">
           <div class="card-body">
             <h5 class="card-title">{{Items.make}}</h5>
             <p class="card-text">{{Items.description}}</p>
-            <a href="{{url_for('destination.show', id=destinations.id)}}" class="btn btn-danger">View Details</a>
+            <a href="" class="btn btn-danger">View Details</a>
             
             <p class="card-text"><small class="text-muted">{{Items.comments|length}} Comment(s)</small></p>
             
