--- a/auction/templates/base.html
+++ b/auction/templates/base.html
@@ -37,7 +37,7 @@
   <header>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="homepage.html"><img src="../static/Images/logo/35132-removebg-preview.png"
+      <a class="navbar-brand" href="/"><img src="../static/Images/logo/35132-removebg-preview.png"
           style="max-height: 50px; max-width: 50px;" /> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
