--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -167,6 +167,7 @@
             <a href="" class="btn btn-danger">View Details</a>
             
             <p class="card-text"><small class="text-muted">{{Items.comments|length}} Comment(s)</small></p>
+            <p class="card-text"><small class="text-muted">{{Items.bids|length}} Bid(s)</small></p>
             
           </div>
         </div>
