--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -52,7 +52,7 @@
     </div>
     <div class="col-md-6 col-12">
       <p>
-        <font size="7" color="White">Browse Watches</font>
+        <font size="7" color="White">Search Watches</font>
       </p>
     </div>
   </div>
@@ -125,10 +125,10 @@
 
 <div style="text-align:center">
   <h2>
-    <font size="7" color="White">Top Watches</font>
+    <font size="7" color="White">Browse Watches</font>
   </h2>
   <p>
-    <font size="3" color="White">Browse popular watches</font>
+    <font size="3" color="White">from our large selection</font>
   </p>
 </div>
 
