--- a/auction/templates/itemdetails.html
+++ b/auction/templates/itemdetails.html
@@ -7,6 +7,11 @@
 
   <style>
 
+    .image-holder {
+      display: flex;
+      justify-content: center;
+    }
+
     #post-review {
 
       margin-top: 25px;
@@ -41,19 +46,10 @@
     <!-- Container for the image gallery -->
     <div class="col-md-10 col-lg-5">
       <div class="slider-holder">
+        
         <span id="slider-image-1"></span>
-        <span id="slider-image-2"></span>
-        <span id="slider-image-3"></span>
         <div class="image-holder">
-          <img src="img/images1/rolex1.jpg" class="slider-image" />
-          <img src="img/images1/rolex2.jpg" class="slider-image" />
-          <img src="img/images1/rolex3.jpg" class="slider-image" />
-
-        </div>
-        <div class="button-holder">
-          <a href="#slider-image-1" class="slider-change"></a>
-          <a href="#slider-image-2" class="slider-change"></a>
-          <a href="#slider-image-3" class="slider-change"></a>
+          <img src= "{{watch.image}}" class="slider-image" />
         </div>
       </div>
     </div>
@@ -61,14 +57,8 @@
     <!-- Description -->
     <div class="col-md-3 col-lg-4">
       <div class="myBox">
-        <font color="white">Specifications: <br><br>Make: Rolex <!-- watch.make --> <br> Model: Submariner <!-- watch.model --> <br> Year: 2015 <!-- watch.year --> <br> Condition: <!-- watch.condition -->
-          used<br> Movement: Automatic <!-- watch.movement --><br><br> Description: <!-- watch.description --><br>
-          Almost new Rolex Submariner, used on a few occasions.
-          Will come with original paperwork and boxes. Watch was purchased
-          from Rolex Brisbane in November 2015. Great watch, never missed a beat. Lorem ipsum dolor sit amet,
-          consectetur
-          adipiscing elit. Etiam convallis efficitur commodo. Nulla iaculis, lectus in congue semper, quam dui mattis
-          metus, sed bibendum erat sapien vel urna.
+        <font color="white">Specifications: <br><br>Make: {{watch.make}} <br> Model: {{watch.model}} <br> Year: {{watch.year}} <br> Condition: {{watch.condition}}
+          <br> Movement: {{watch.movement}} <br><br> Description: {{watch.description}}<br>
         </font>
       </div>
     </div>
@@ -83,7 +73,7 @@
         <div class="card-body">
           <blockquote class="blockquote mb-0">
             <p>Auction ends in:<br> <!-- created_at -->
-              <font color="red">1d 11h 53m</font> <br><br>Starting Bid: $1,500 <br> Last Bid: $2,675 <br><cite>
+              <font color="red">1d 11h 53m</font> <br><br>Starting Bid: {{watch.starting_bid}} <!-- starting bid--> <br> Last Bid: $2,675 <!-- last bid --><br><cite>
                 <font size="2" color="black">-placed by user andy88 at 21:33</font>
               </cite>
             </p>
