--- a/auction/templates/watchlist.html
+++ b/auction/templates/watchlist.html
@@ -1,55 +1,30 @@
 {% extends 'base.html'%}
 
 {% block header %}
-<!doctype html>
-<html lang="en">
 
-<head>
+<title>Watch List</title>
+<!-- Required meta tags -->
 
-  <title>Watch List</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<style>
+  body {
+    background-image: linear-gradient(to right, #7a7a7a, #8b4f00, #524e4e);
+    ;
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/index.css">
+  }
 
-  <style>
-    body {
-      background-image: linear-gradient(to right, #7a7a7a, #8b4f00, #524e4e);
-      ;
+  .content {
 
-    }
+    background: black;
+    width: 50%;
+    padding: 40px;
+    margin: 100px auto;
 
-    .content {
+  }
+</style>
 
-      background: black;
-      width: 50%;
-      padding: 40px;
-      margin: 100px auto;
+{% endblock %}
 
-    }
-  </style>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-
-  {% endblock %}
-
-  {% block content %}
-
-</head>
+{% block content %}
 
 <div class="container-fluid">
   <!-- Start a for loop that draws information from the database -->
@@ -71,7 +46,7 @@
     <div class="col-md-4">
       <div class="card">
         <div class="card-header">
-          {{watch.name}
+          {{watch.name}}
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
@@ -112,9 +87,4 @@
         </div>
       </div>
     -->
-
-</body>
-
-</html>
-
 {% endblock %}
