--- a/auction/templates/homepage.html
+++ b/auction/templates/homepage.html
@@ -76,7 +76,7 @@
   </div>
   <div class="col-md-4">
     <div >
-      <form class="form-inline d-flex flex-nowrap" action="{{url_for('main.index')}}">
+      <form class="form-inline d-flex flex-nowrap" action="{{url_for('main.search')}}">
         <input type="text" name="search" class="form-control flex-grow-1 my-1 mr-sm-2" placeholder="search watches by name">
         <button type="submit" class="flex-shrink-1 btn btn-light my-1">Search</button>
       </form>
